--- a/MiniAccountingSystem/appsettings.json
+++ b/MiniAccountingSystem/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=MiniAccountingSystem;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=DESKTOP-149BBVM;Database=QtecAccountsDB;Trusted_Connection=True;MultipleActiveResultSets=true;Encrypt=False"
   },
   "Logging": {
     "LogLevel": {
